promo - done, consultation - in process

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-@import "base/general";
 @import "base/media";
 @import "base/var_mix";
 
@@ -13,3 +12,5 @@
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/titles";
+@import "blocks/consultation";
