--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -3,10 +3,16 @@
     height: 30px;
     border-radius: 5px;
     background-color: $main-color;
-    color: #fff;
     border: none;
     font-weight: 500;
+    color: #fff;
     text-align: center;
     font-size: 12px;
     text-transform: uppercase;
+    &_main {
+        margin-top: 67px;
+        width: 300px;
+        height: 50px;
+        font-size: 16px;
+    }
 }
