Consultation&Advantages&Promo - Done. Mobile+

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-@import "base/media";
 @import "base/var_mix";
 
 * {
@@ -13,4 +12,8 @@
 @import "blocks/header";
 @import "blocks/buttons";
 @import "blocks/titles";
+@import "blocks/advantages";
 @import "blocks/consultation";
+@import "blocks/forms";
+
+@import "base/media";
