--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -5,6 +5,7 @@
     &__logo {
         display: block;
         width: 250px;
+        min-width: 200px;
         img {
             width: 100%;
         }
@@ -13,6 +14,7 @@
         font-size: 12px;
         font-weight: 500;  
         color: #fff;
+        padding: 0 10px;
         text-align: center;
         span {
             display: block;
