--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,5 +15,6 @@
 @import "blocks/advantages";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
 
 @import "base/media";
