--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -6,6 +6,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-bottom: 0;
+        padding-left: 0;
     }
     &__tab {
         width: 220px;
@@ -20,8 +22,6 @@
         transform: skewX(-25deg);
         margin: 0 5px;
         cursor: pointer;
-        margin-bottom: 0;
-        padding-left: 0;
         transition: 0.1s all;
         &:hover {
             box-shadow: 1px 1px 5px $main-color;
@@ -38,11 +38,19 @@
     }
     &__content {
         margin-top: 60px;
+        display: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
     &-item {
+        overflow: hidden;
         width: 300px;
         min-height: 440px;
         border: solid 2px #e8e8e8;
+        margin-bottom: 20px;
         padding: 20px 20px 26px 20px;
         &__img {
             display: block;
@@ -67,16 +75,20 @@
             display: block;
             margin-top: 17px;
             font-size: 14px;
-            font-weight: 400;
+            font-weight: 500;
             color: $main-color;
             text-align: center;
+            text-transform: uppercase;
+            text-decoration: underline;
             &:hover {
                 color: $main-color;
             }
         }
         hr {
             background-color: #e8e8e8;
-            height: 1px;
+            margin-top: 19px;
+            margin-bottom: 21px;
+            border-bottom: none;
         }
         &__footer {
             display: flex;
@@ -93,6 +105,67 @@
             font-weight: 700;
             color: #050505;
             font-size: 20px;
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            padding-right: 20px;
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+                padding-right: 0;
+            }
+        }
+        &__list {
+            padding-left: 19px; //reset bootstrap
+            margin-bottom: 0; //reset bootstrap
+            padding-right: 20px;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(0%);
+            transition: 0.5s all;
+            list-style-type: none;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0;
+            }
+            li {
+                position: relative;
+                font-size: 14px;
+                font-weight: 300;
+                color: #555555;
+                margin-bottom: 20px;
+                &:before {
+                    content: "";
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $main-color;
+                    left: -14px;
+                    top: 7px;
+                }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: $main-color;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover {
+                color: $main-color;
+            }
         }
     }
 }
