--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -9,8 +9,9 @@
     text-align: center;
     font-size: 12px;
     text-transform: uppercase;
+    transition: 0.2s all;
     &:hover {
-        box-shadow: 1px 10px #fff;
+        text-shadow: 1px 1px 5px #000;
     }
     &_main {
         margin-top: 67px;
