--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -1,5 +1,5 @@
 .catalog {
-    padding-bottom: 100px;
+    padding: 0px 10px 100px 10px;
     &__tabs {
         margin-top: 70px;
         list-style-type: none;
@@ -39,7 +39,7 @@
     &__content {
         margin-top: 60px;
         display: none;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
         &_active {
             display: flex;
@@ -50,7 +50,7 @@
         width: 300px;
         min-height: 440px;
         border: solid 2px #e8e8e8;
-        margin-bottom: 20px;
+        margin: 0 8px 20px 8px;
         padding: 20px 20px 26px 20px;
         &__img {
             display: block;
