--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -1,171 +1,174 @@
 .catalog {
-    padding: 0px 10px 100px 10px;
-    &__tabs {
-        margin-top: 70px;
-        list-style-type: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 0;
-        padding-left: 0;
+  padding: 0px 10px 100px 10px;
+  &__tabs {
+    margin-top: 70px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+  &__tab {
+    width: 220px;
+    height: 50px;
+    border: solid 2px #d0d0d0;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #6b6b6b;
+    text-align: center;
+    line-height: 48px;
+    transform: skewX(-25deg);
+    margin: 0 5px;
+    cursor: pointer;
+    transition: 0.1s all;
+    &:hover {
+      box-shadow: 1px 1px 5px $main-color;
+      border: none;
     }
-    &__tab {
-        width: 220px;
-        height: 50px;
-        border: solid 2px #d0d0d0;
-        font-size: 18px;
-        font-weight: 500;
-        text-transform: uppercase;
-        color: #6b6b6b;
-        text-align: center;
-        line-height: 48px;
-        transform: skewX(-25deg);
-        margin: 0 5px;
-        cursor: pointer;
-        transition: 0.1s all;
-        &:hover {
-            box-shadow: 1px 1px 5px $main-color;
-            border: none;
-        }
-        div {
-            transform: skewX(25deg);
-        }
-        &_active {
-            background-color: $main-color;
-            color: #fff;
-            border: none;
-        }
+    div {
+      transform: skewX(25deg);
+    }
+    &_active {
+      background-color: $main-color;
+      color: #fff;
+      border: none;
+    }
+  }
+  &__content {
+    margin-top: 60px;
+    display: none;
+    justify-content: center;
+    flex-wrap: wrap;
+    &_active {
+      display: flex;
+    }
+  }
+  &-item {
+    overflow: hidden;
+    width: 300px;
+    min-height: 440px;
+    border: solid 2px #e8e8e8;
+    margin: 0 8px 20px 8px;
+    padding: 20px 20px 26px 20px;
+    &__img {
+      display: block;
+      margin: 0 auto;
+      max-width: 100%;
+      height: 200px;
+    }
+    &__subtitle {
+      margin-top: 20px;
+      font-weight: 700;
+      font-size: 16px;
+      color: #0d0d0d;
+      text-align: center;
+    }
+    &__descr {
+      margin-top: 16px;
+      color: #0d0d0d;
+      text-align: center;
+      font-weight: 300;
+    }
+    &__link {
+      display: block;
+      margin-top: 17px;
+      font-size: 14px;
+      font-weight: 500;
+      color: $main-color;
+      text-align: center;
+      text-transform: uppercase;
+      text-decoration: underline;
+      &:hover {
+        color: $main-color;
+      }
+    }
+    hr {
+      background-color: #e8e8e8;
+      margin-top: 19px;
+      margin-bottom: 21px;
+      border-bottom: none;
+    }
+    &__footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &__old-price {
+      text-decoration: line-through;
+      font-weight: 300;
+      font-size: 14px;
+      color: #cccccc;
+    }
+    &__price {
+      font-weight: 700;
+      color: #050505;
+      font-size: 20px;
+    }
+    &__wrapper {
+      display: flex;
+      width: calc(200% + 40px);
     }
     &__content {
-        margin-top: 60px;
-        display: none;
-        justify-content: center;
-        flex-wrap: wrap;
-        &_active {
-            display: flex;
-        }
+      width: 50%;
+      margin-right: 0;
+      transform: translateX(-100%);
+      transition: 0.5s all;
+      padding-right: 20px;
+      &_active {
+        transform: translateX(0%);
+        padding-right: 0;
+      }
     }
-    &-item {
-        overflow: hidden;
-        width: 300px;
-        min-height: 440px;
-        border: solid 2px #e8e8e8;
-        margin: 0 8px 20px 8px;
-        padding: 20px 20px 26px 20px;
-        &__img {
-            display: block;
-            margin: 0 auto;
-            max-width: 100%;
-            height: 200px;
+    &__benefits {
+      padding-left: 19px; //reset bootstrap
+      margin-bottom: 0; //reset bootstrap
+      padding-right: 20px;
+      width: 50%;
+      margin-left: 20px;
+      transform: translateX(0%);
+      transition: 0.5s all;
+      &_active {
+        transform: translateX(-100%);
+        margin-left: 0;
+      }
+
+      &-list {
+        list-style: none;
+      }
+
+      li {
+        position: relative;
+        font-size: 14px;
+        font-weight: 300;
+        color: #555555;
+        margin-bottom: 20px;
+        &:before {
+          content: '';
+          position: absolute;
+          width: 5px;
+          height: 5px;
+          background-color: $main-color;
+          left: -14px;
+          top: 7px;
         }
-        &__subtitle {
-            margin-top: 20px;
-            font-weight: 700;
-            font-size: 16px;
-            color: #0d0d0d;
-            text-align: center;
-        }
-        &__descr {
-            margin-top: 16px;
-            color: #0d0d0d;
-            text-align: center;
-            font-weight: 300;
-        }
-        &__link {
-            display: block;
-            margin-top: 17px;
-            font-size: 14px;
-            font-weight: 500;
-            color: $main-color;
-            text-align: center;
-            text-transform: uppercase;
-            text-decoration: underline;
-            &:hover {
-                color: $main-color;
-            }
-        }
-        hr {
-            background-color: #e8e8e8;
-            margin-top: 19px;
-            margin-bottom: 21px;
-            border-bottom: none;
-        }
-        &__footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        &__old-price {
-            text-decoration: line-through;
-            font-weight: 300;
-            font-size: 14px;
-            color: #cccccc;
-        }
-        &__price {
-            font-weight: 700;
-            color: #050505;
-            font-size: 20px;
-        }
-        &__wrapper {
-            display: flex;
-            width: calc(200% + 40px);
-        }
-        &__content {
-            width: 50%;
-            margin-right: 0;
-            transform: translateX(-100%);
-            transition: 0.5s all;
-            padding-right: 20px;
-            &_active {
-                transform: translateX(0%);
-                margin-right: 20px;
-                padding-right: 0;
-            }
-        }
-        &__list {
-            padding-left: 19px; //reset bootstrap
-            margin-bottom: 0; //reset bootstrap
-            padding-right: 20px;
-            width: 50%;
-            margin-left: 20px;
-            transform: translateX(0%);
-            transition: 0.5s all;
-            list-style-type: none;
-            &_active {
-                transform: translateX(-100%);
-                margin-left: 0;
-            }
-            li {
-                position: relative;
-                font-size: 14px;
-                font-weight: 300;
-                color: #555555;
-                margin-bottom: 20px;
-                &:before {
-                    content: "";
-                    position: absolute;
-                    width: 5px;
-                    height: 5px;
-                    background-color: $main-color;
-                    left: -14px;
-                    top: 7px;
-                }
-            }
-        }
-        &__back {
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(calc(-50% - 19px));
-            display: block;
-            color: $main-color;
-            font-size: 14px;
-            font-weight: 500;
-            text-decoration: underline;
-            text-transform: uppercase;
-            &:hover {
-                color: $main-color;
-            }
-        }
+      }
     }
+    &__back {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(calc(-50% - 19px));
+      display: block;
+      color: $main-color;
+      font-size: 14px;
+      font-weight: 500;
+      text-decoration: underline;
+      text-transform: uppercase;
+      &:hover {
+        color: $main-color;
+      }
+    }
+  }
 }
