--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,41 +1,41 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__logo {
+    display: block;
+    width: 150px;
+    margin-left: 10px;
+    img {
+      width: 100%;
+    }
+  }
+  &__official {
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+    padding: 0 10px;
+    text-align: center;
+    span {
+      display: block;
+      font-size: 18px;
+      font-weight: 700;
+    }
+  }
+  &__phone {
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: right;
+    color: #fff;
+    text-decoration: none;
+    &:hover {
+      color: #fff;
+    }
+  }
+  &__contacts {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    &__logo {
-        display: block;
-        width: 250px;
-        min-width: 200px;
-        img {
-            width: 100%;
-        }
-    }
-    &__official {
-        font-size: 12px;
-        font-weight: 500;  
-        color: #fff;
-        padding: 0 10px;
-        text-align: center;
-        span {
-            display: block;
-            font-size: 18px;
-            font-weight: 700;
-        }
-    }
-    &__phone {
-        display: block;
-        font-size: 18px;
-        font-weight: 700;
-        text-align: right;
-        color: #fff;
-        text-decoration: none;
-        &:hover {
-            color: #fff;
-        }
-    }
-    &__contacts {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
