--- a/css/style.css
+++ b/css/style.css
@@ -454,18 +454,21 @@ progress {
   src: url("../fonts/");
   src: url("../fonts/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSansCyrl-300.ttf") format("truetype");
   font-weight: 300;
+  font-display: swap;
 }
 @font-face {
   font-family: "Museo Sans";
   src: url("../fonts/MuseoSansCyrl-500.eot");
   src: url("../fonts/MuseoSansCyrl-500.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl-500.woff") format("woff"), url("../fonts/MuseoSansCyrl-500.ttf") format("truetype");
   font-weight: 500;
+  font-display: swap;
 }
 @font-face {
   font-family: "Museo Sans";
   src: url("../fonts/MuseoSansCyrl-700.eot");
   src: url("../fonts/MuseoSansCyrl-700.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSansCyrl-700.ttf") format("truetype");
   font-weight: 700;
+  font-display: swap;
 }
 @font-face {
   font-family: "icomoon";
@@ -473,7 +476,7 @@ progress {
   src: url("fonts/icomoon.eot?sa52bd#iefix") format("embedded-opentype"), url("fonts/icomoon.ttf?sa52bd") format("truetype"), url("fonts/icomoon.woff?sa52bd") format("woff"), url("fonts/icomoon.svg?sa52bd#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 @font-face {
   font-family: "icomoon";
@@ -481,9 +484,10 @@ progress {
   src: url("../fonts/icomoon.eot?sa52bd#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?sa52bd") format("truetype"), url("../fonts/icomoon.woff?sa52bd") format("woff"), url("../fonts/icomoon.svg?sa52bd#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
-[class^=icon-], [class*=" icon-"] {
+[class^=icon-],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   font-style: normal;
@@ -836,10 +840,17 @@ progress {
   margin: 0 auto;
 }
 
+.no-webp .promo {
+  background: url(../img/main-bg.jpg) center center/cover no-repeat;
+}
+
+.webp .promo {
+  background: url(../img/webp/main-bg.webp) center center/cover no-repeat;
+}
+
 .promo {
   min-height: 650px;
   padding: 21px 10px 93px;
-  background: url(../img/main-bg.jpg) center center/cover no-repeat;
   color: #fff;
 }
 .promo__wrapper {
@@ -950,6 +961,7 @@ progress {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  gap: 10px;
 }
 
 .button {
@@ -1029,7 +1041,7 @@ progress {
   font-weight: 300;
 }
 .advantages__link {
-  color: #f00;
+  color: #c70101;
 }
 .advantages__link:hover {
   color: #f00;
@@ -1039,10 +1051,17 @@ progress {
           animation: heartbeat 1s ease infinite;
 }
 
+.no-webp .consultation {
+  background: url(../img/second-bg.jpg) center center/cover no-repeat;
+}
+
+.webp .consultation {
+  background: url(../img/webp/second-bg.webp) center center/cover no-repeat;
+}
+
 .consultation {
   min-height: 680px;
   padding: 100px 10px 92px;
-  background: url(../img/second-bg.jpg) center center/cover no-repeat;
   color: #fff;
 }
 .consultation__descr {
@@ -1191,7 +1210,7 @@ progress {
 }
 .catalog-item__img {
   display: block;
-  margin: 0 auto;
+  text-align: center;
   max-width: 100%;
   height: 200px;
 }
@@ -1216,7 +1235,7 @@ progress {
   color: #c70101;
   text-align: center;
   text-transform: uppercase;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .catalog-item__link:hover {
   color: #c70101;
@@ -1242,7 +1261,7 @@ progress {
   text-decoration: line-through;
   font-weight: 300;
   font-size: 14px;
-  color: #cccccc;
+  color: #767676;
 }
 .catalog-item__price {
   font-weight: 700;
@@ -1314,7 +1333,7 @@ progress {
   color: #c70101;
   font-size: 14px;
   font-weight: 500;
-  text-decoration: underline;
+  text-decoration: none;
   text-transform: uppercase;
 }
 .catalog-item__back:hover {
@@ -1532,10 +1551,12 @@ progress {
   .header__phone {
     font-size: 16px;
   }
-  .carousel .prev, .carousel .next {
+  .carousel .prev,
+  .carousel .next {
     height: 100%;
   }
-  .carousel .prev img, .carousel .next img {
+  .carousel .prev img,
+  .carousel .next img {
     width: 16px;
     height: 25px;
   }
@@ -1549,6 +1570,14 @@ progress {
   }
   .header__official {
     margin: 10px 0;
+  }
+  .header__contacts {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__phone {
+    padding: 10px;
   }
   .promo {
     padding-bottom: 30px;
