--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -54,7 +54,7 @@
     padding: 20px 20px 26px 20px;
     &__img {
       display: block;
-      margin: 0 auto;
+      text-align: center;
       max-width: 100%;
       height: 200px;
     }
@@ -79,7 +79,7 @@
       color: $main-color;
       text-align: center;
       text-transform: uppercase;
-      text-decoration: underline;
+      text-decoration: none;
       &:hover {
         color: $main-color;
       }
@@ -99,7 +99,7 @@
       text-decoration: line-through;
       font-weight: 300;
       font-size: 14px;
-      color: #cccccc;
+      color: #767676;
     }
     &__price {
       font-weight: 700;
@@ -164,7 +164,7 @@
       color: $main-color;
       font-size: 14px;
       font-weight: 500;
-      text-decoration: underline;
+      text-decoration: none;
       text-transform: uppercase;
       &:hover {
         color: $main-color;
