--- a/sass/libs/_fonts.scss
+++ b/sass/libs/_fonts.scss
@@ -1,73 +1,76 @@
 @font-face {
-    font-family: 'Museo Sans';
-    src: url('../fonts/');
-    src: url('../fonts/?#iefix') format('embedded-opentype'),
+  font-family: 'Museo Sans';
+  src: url('../fonts/');
+  src: url('../fonts/?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl-300.woff') format('woff'),
     url('../fonts/MuseoSansCyrl-300.ttf') format('truetype');
-    font-weight: 300;
+  font-weight: 300;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'Museo Sans';
-    src: url('../fonts/MuseoSansCyrl-500.eot');
-    src: url('../fonts/MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
+  font-family: 'Museo Sans';
+  src: url('../fonts/MuseoSansCyrl-500.eot');
+  src: url('../fonts/MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl-500.woff') format('woff'),
     url('../fonts/MuseoSansCyrl-500.ttf') format('truetype');
-    font-weight: 500;
+  font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Museo Sans';
-    src: url('../fonts/MuseoSansCyrl-700.eot');
-    src: url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
+  font-family: 'Museo Sans';
+  src: url('../fonts/MuseoSansCyrl-700.eot');
+  src: url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
     url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
     url('../fonts/MuseoSansCyrl-700.ttf') format('truetype');
-    font-weight: 700;
+  font-weight: 700;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'icomoon';
-    src:  url('fonts/icomoon.eot?sa52bd');
-    src:  url('fonts/icomoon.eot?sa52bd#iefix') format('embedded-opentype'),
-      url('fonts/icomoon.ttf?sa52bd') format('truetype'),
-      url('fonts/icomoon.woff?sa52bd') format('woff'),
-      url('fonts/icomoon.svg?sa52bd#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-@font-face {
-    font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?sa52bd');
-    src:  url('../fonts/icomoon.eot?sa52bd#iefix') format('embedded-opentype'),
-        url('../fonts/icomoon.ttf?sa52bd') format('truetype'),
-        url('../fonts/icomoon.woff?sa52bd') format('woff'),
-        url('../fonts/icomoon.svg?sa52bd#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'icomoon';
+  src: url('fonts/icomoon.eot?sa52bd');
+  src: url('fonts/icomoon.eot?sa52bd#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?sa52bd') format('truetype'),
+    url('fonts/icomoon.woff?sa52bd') format('woff'),
+    url('fonts/icomoon.svg?sa52bd#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+@font-face {
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon.eot?sa52bd');
+  src: url('../fonts/icomoon.eot?sa52bd#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?sa52bd') format('truetype'),
+    url('../fonts/icomoon.woff?sa52bd') format('woff'),
+    url('../fonts/icomoon.svg?sa52bd#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+[class^='icon-'],
+[class*=' icon-'] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-pinterest-p:before {
-    content: "\e900";
+  content: '\e900';
 }
 .icon-instagram:before {
-    content: "\e901";
+  content: '\e901';
 }
 .icon-facebook-f:before {
-    content: "\e902";
-}  
-  
+  content: '\e902';
+}
