--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,32 +1,31 @@
-@import "libs/bootstrap-reboot.min";
-@import "libs/fonts";
-@import "libs/slick";
-@import "libs/animate";
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/fonts';
+@import 'libs/animate';
 
-@import "base/var_mix";
-@import "base/animation";
+@import 'base/var_mix';
+@import 'base/animation';
 
 * {
-	font-family: 'Museo Sans', sans-serif;
-	font-weight: 500;
+  font-family: 'Museo Sans', sans-serif;
+  font-weight: 500;
 }
 .container {
-	position: relative;
-	max-width: 950px;
-	margin: 0 auto;
+  position: relative;
+  max-width: 950px;
+  margin: 0 auto;
 }
-@import "blocks/promo";
-@import "blocks/header";
-@import "blocks/buttons";
-@import "blocks/titles";
-@import "blocks/advantages";
-@import "blocks/consultation";
-@import "blocks/forms";
-@import "blocks/carousel";
-@import "blocks/catalog";
-@import "blocks/reviews";
-@import "blocks/footer";
-@import "blocks/modal";
-@import "blocks/pageup";
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons';
+@import 'blocks/titles';
+@import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
+@import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/pageup';
 
-@import "base/media";
+@import 'base/media';
